# ComputerGraphicsAssignment4

./: .gitignore  .gitmodules  Ballistic.typ  CMakeLists.txt  README.md  TODO.md
Assets/Shaders/: Lights.frag  Maths.frag  MotionBlur.frag  PBR.frag  PBR.vert  PBRHelpers.frag  Particle.frag  Particle.vert  SampleEquirect.frag  Shadow.vert  Sky.frag  Sky.vert  SkyBox.frag  SkyBox.vert  ToneMapping.frag  UI.frag  UI.vert  Water.frag  Water.vert  WaterTCS.glsl  WaterTES.glsl  WorldColor.frag  WorldColor.vert  WorldTexture.frag  WorldTexture.vert
Include/: Application.h  Clock.h  GameObject.h  Input.h  ParticleSystem.h  Physics.h  Singleton.h  Window.h
Include/Components/: Animation.h  Attack.h  Camera3D.h  CannonAIController.h  CannonController.h  CannonPlayerController.h  Collider.h  Component.h  DirectionalLight.h  Flag.h  FreeViewControls.h  Health.h  HealthBar.h  ModelInstance.h  PointLight.h  RigidBody.h  ShipAIController.h  ShipController.h  ShipPlayerController.h  Sky.h  Text.h  Transform.h  Water.h
Include/Events/: DamageTaken.h  DetachGameObject.h  Event.h  EventQueue.h  Fire.h  GameEnd.h  ShipSunk.h  SpawnParticles.h  WindowResized.h
Include/Lib/: OpenGL.h  glfw.h  glm.h  stb.h  tiny_gltf.h
Include/Mesh/: Mesh.h
Include/Resources/: ComputeShader.h  Model.h  ResourceLoader.h  Shader.h  Texture.h
Include/Utils/: Color.h  Constants.h  GameState.h  Log.h  Math.h  Path.h  Profiling.h  Random.h  Ranges.h  RenderPass.h  RenderingStyle.h  ShadingModes.h  Time.h  View.h
Report/: Report.typ
Scripts/: check_includes.py  check_shaders_structs_layout.py  convert_metallic_smoothness_to_roughness.py  copy_assets.py  generate_vignette.py  increase_roughness.py  line_counter.py
Src/: Application.cpp  Clock.cpp  GameObject.cpp  Input.cpp  Main.cpp  ParticleSystem.cpp  Physics.cpp  Window.cpp
Src/Components/: Animation.cpp  Attack.cpp  Camera3D.cpp  CannonAIController.cpp  CannonController.cpp  CannonPlayerController.cpp  Collider.cpp  Component.cpp  DirectionalLight.cpp  Flag.cpp  FreeViewControls.cpp  Health.cpp  HealthBar.cpp  ModelInstance.cpp  PointLight.cpp  RigidBody.cpp  ShipAIController.cpp  ShipController.cpp  ShipPlayerController.cpp  Sky.cpp  Text.cpp  Transform.cpp  Water.cpp
Src/Events/: DamageTaken.cpp  DetachGameObject.cpp  EventQueue.cpp  Fire.cpp  GameEnd.cpp  ShipSunk.cpp  SpawnParticles.cpp  (+1 more)
(+38 files in other folders)
